--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
     "joi": "^17.13.1",
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,10 @@
     "nodemailer": "^6.9.13",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.3",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "redis": "^4.6.14",
     "sequelize": "^6.37.3"
   }
 }
