--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^4.6.14",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sharp": "^0.33.4"
   }
 }
